<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/basicMargin"
        android:paddingTop="@dimen/extraBigMargin"
        android:paddingEnd="@dimen/basicMargin"
        android:paddingBottom="@dimen/extraBigMargin">

    <TextView
        android:id="@+id/title"
        style="@style/titleLogo"
        android:text="@string/forgotPassword"
        android:textSize="@dimen/extraBigTextSize"
        app:layout_constraintStart_toStartOf="@+id/editTextFirst"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionFirst"
        style="@style/titleLogo"
        android:layout_marginTop="@dimen/basicMargin"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/editTextFirst"
        style="@style/edtLogo"
        android:layout_marginTop="@dimen/smallMargin"
        android:hint="@string/email"
        android:singleLine="true"
        android:maxLength="@integer/EmailMaxLength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionFirst" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/btnLogo"
        android:layout_marginBottom="@dimen/extraSmallMargin"
        android:text="@string/continue_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        layout="@layout/loading"/>

</FrameLayout>