<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardView="http://schemas.android.com/tools"
    tools:context=".ui.screens.ProductFragment"
    android:padding="@dimen/basicMargin">

    <include
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/btn_back"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/extraSmallMargin"
        app:cardCornerRadius="@dimen/basicRadius"
        android:layout_marginTop="@dimen/extraSmallMargin"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back"
        cardView:cardElevation="@dimen/cardViewShadow">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/test_img" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        style="@style/textTitle"
        android:text="Nike"
        android:textSize="@dimen/bigTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCategory"
        style="@style/text"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/footwear"
        android:layout_marginTop="@dimen/superSmallPadding"
        android:textSize="@dimen/basicTextSize"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fullPrice"
        style="@style/text"
        android:fontFamily="@font/roboto_bold"
        android:text="1000$"
        android:layout_marginTop="@dimen/superSmallMargin"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintStart_toStartOf="@+id/textCategory"
        app:layout_constraintTop_toBottomOf="@+id/textCategory" />

    <TextView
        android:id="@+id/salePrice"
        style="@style/text"
        android:fontFamily="@font/roboto_bold"
        android:text="500$"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/smallTextSize"
        android:visibility="visible"
        android:layout_marginTop="@dimen/superSmallMargin"
        android:layout_marginStart="@dimen/smallMargin"
        app:layout_constraintStart_toEndOf="@+id/fullPrice"
        app:layout_constraintTop_toBottomOf="@+id/textCategory"/>

    <TextView
        android:id="@+id/description"
        style="@style/text"
        android:textSize="@dimen/extraSmallTextSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extraSmallMargin"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="hduhkhc sdhuhdkhkfudjjscjc nijhjhiuhihiuhihdsickisdk sdhkhhchhfdi idh djcksdckdsjckhdsuchdskuch kudshckhdsc sudhckudsckdskhkfdh kuhdfuh uhfdkkdufh hfdkhkfdk kshdkuchk skhkuch"
        app:layout_constraintTop_toBottomOf="@+id/fullPrice" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textTitle"
        android:layout_marginTop="@dimen/extraSmallMargin"
        android:text="@string/selectSize"
        android:textSize="@dimen/smallTextSize"
        app:layout_constraintStart_toStartOf="@+id/textCategory"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <LinearLayout
        android:id="@+id/sizeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/superSmallMargin"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <TextView
            android:id="@+id/checkBox1"
            style="@style/checkBox"
            android:text="S"
            android:background="@drawable/bg_check_box_checked"/>
        <TextView
            android:id="@+id/checkBox2"
            style="@style/checkBox"
            android:layout_marginStart="@dimen/smallPadding"
            android:layout_marginEnd="@dimen/smallPadding"
            android:text="M"
            android:background="@drawable/bg_check_box_checked"/>
        <TextView
            android:id="@+id/checkBox3"
            style="@style/checkBox"
            android:text="L"
            android:background="@drawable/bg_check_box_checked"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        style="@style/basicButton"
        android:text="@string/addToBasket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>